--- a/index.html
+++ b/index.html
@@ -57,5 +57,10 @@
             </div>
         </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
+            integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
+            crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/calculator.js"></script>
 </body>
 </html>
